# rust-api-example

./: .dockerignore  .env.docker  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  sqlx-data.json
migrations/: 20230604114832_initial.sql  20230605172711_refresh_tokens.sql
src/: database.rs  error.rs  main.rs  model.rs  problem.rs  util.rs
src/routes/: auth.rs  mod.rs  posts.rs
src/routes/auth/: blacklisted_domains.txt  guard.rs  hashing.rs  jwt.rs  mod.rs  utils.rs
