[package]
name = "rust-api-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["tokio"] }
axum-extra = { version = "0.7.4", features = ["cookie"] }
chrono = "0.4.26"
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
once_cell = "1.18.0"
rand = "0.8.5"
regex = "1.8.3"
rust-argon2 = "1.0.0"
serde = "1.0.163"
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-native-tls", "chrono", "migrate"] }
tokio = { version = "1.28.1", features = ["full"] }
uuid = "1.3.3"
